extensions/renderer/resources/test_custom_bindings.js
@@ -179,6 +179,19 @@ binding.registerCustomHook(function(api) {
     if (typeof(expected) !== typeof(actual))
       return false;
 
+    if ((actual instanceof ArrayBuffer) && (expected instanceof ArrayBuffer)) {
+      if (actual.byteLength != expected.byteLength)
+        return false;
+      var actualView = new Uint8Array(actual);
+      var expectedView = new Uint8Array(expected);
+      for (var i = 0; i < actualView.length; ++i) {
+        if (actualView[i] != expectedView[i]) {
+          return false;
+        }
+      }
+      return true;
+    }
+
     for (var p in actual) {
       if ($Object.hasOwnProperty(actual, p) &&
           !$Object.hasOwnProperty(expected, p)) {
